# blackjack_r2ha_2022_python

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml
blackjack_r2ha_2022_python/: __main__.py  ansi.py  card.py  console.py  deck.py  game.py  hand.py  rank.py  suit.py
tests/: test_card.py  test_card_display.py  test_deck.py  test_hand_value_ace.py
